--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.6.4",
+    "@heroui/react": "2.7.5",
     "@svgr/webpack": "^8.1.0",
     "@wavesurfer/react": "^1.0.7",
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "next": "14.2.20",
     "axios": "^1.7.9",
+    "js-cookie": "^3.0.5",
+    "react-multi-date-picker": "^4.5.2",
     "react-media-recorder": "^1.7.1",
     "swiper": "^11.1.15",
     "wavesurfer.js": "^7.8.10"
