--- a/package.json
+++ b/package.json
@@ -12,23 +12,25 @@
     "@heroui/react": "2.7.5",
     "@svgr/webpack": "^8.1.0",
     "@wavesurfer/react": "^1.0.7",
-    "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "next": "14.2.20",
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
-    "react-multi-date-picker": "^4.5.2",
+    "laravel-echo": "^2.0.2",
+    "leaflet": "^1.9.4",
+    "next": "14.2.20",
+    "pusher-js": "^8.4.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-media-recorder": "^1.7.1",
+    "react-multi-date-picker": "^4.5.2",
     "swiper": "^11.1.15",
     "wavesurfer.js": "^7.8.10"
   },
   "devDependencies": {
     "@types/react": "^19.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.20"
+    "eslint-config-next": "14.2.20",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
