--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ NEXT_PUBLIC_LOGO = LINGOMASTERS
 
 
 NEXT_PUBLIC_REVERB_APP_KEY=38o85dvvyb0muumwuc3y
-NEXT_PUBLIC_REVERB_HOST=192.168.1.2
+NEXT_PUBLIC_REVERB_HOST=https://api.lingomasters.ir
 NEXT_PUBLIC_REVERB_PORT=8001
 NEXT_PUBLIC_REVERB_SCHEME=http
 
