--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ NEXT_PUBLIC_SOCIAL_YOUTUBE=https://www.youtube.com/@lingomasters_ir
 NEXT_PUBLIC_SOCIAL_INSTAGRAM=https://www.instagram.com/lingomasters_ir?igsh=bzlkdWhpOWJ0cWkw
 NEXT_PUBLIC_SOCIAL_WHATSAPP=https://chat.whatsapp.com/CpzEWOStdDgHJJgO06p5dx
 NEXT_PUBLIC_SOCIAL_APARAT=https://shorts.aparat.com/user/u_29372389/shorts
-NEXT_PUBLIC_SOCIAL_TIKTOK=t.me/
+NEXT_PUBLIC_SOCIAL_TIKTOK=https://www.tiktok.com/@lingomasters.ir?_t=ZS-8wrrXZ8iOwc&_r=1
 NEXT_PUBLIC_SOCIAL_PINTEREST=https://pin.it/2MwVzHmOs
 NEXT_PUBLIC_SOCIAL_FACEBOOK=https://www.facebook.com/profile.php?id=61576747001858
 NEXT_PUBLIC_SOCIAL_X=https://x.com/lingomasters_ir?t=vthG706oEVgBeFokWtmeNA&s=09
