--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@ NEXT_PUBLIC_LOGO = LINGOMASTERS
 
 
 NEXT_PUBLIC_REVERB_APP_KEY=38o85dvvyb0muumwuc3y
-NEXT_PUBLIC_REVERB_HOST=https://api.lingomasters.ir
-NEXT_PUBLIC_REVERB_PORT=8001
-NEXT_PUBLIC_REVERB_SCHEME=http
+NEXT_PUBLIC_REVERB_HOST=api.lingomasters.ir
+NEXT_PUBLIC_REVERB_PORT=6001
+NEXT_PUBLIC_REVERB_SCHEME=https
 
 NEXT_PUBLIC_SOCIAL_ADDRESS=تهران، خیابان مدنی، کوی فتاحی، بن بست توانا، پلاک 2 واحد 3،
                            کدپستی 1617746964
