--- a/.env
+++ b/.env
@@ -11,7 +11,8 @@ NEXT_PUBLIC_REVERB_SCHEME=https
 
 NEXT_PUBLIC_SOCIAL_ADDRESS=تهران، خیابان مدنی، کوی فتاحی، بن بست توانا، پلاک 2 واحد 3،
                            کدپستی 1617746964
-NEXT_PUBLIC_SOCIAL_MOBILE=09114035060
+; NEXT_PUBLIC_SOCIAL_MOBILE=09114035060
+NEXT_PUBLIC_SOCIAL_MOBILE=60 350 40 0911
 
 NEXT_PUBLIC_SOCIAL_TELEGRAM=https://t.me/lingomasters
 NEXT_PUBLIC_SOCIAL_YOUTUBE=https://www.youtube.com/@lingomasters_ir
